lib/miniaudio/miniaudio.auto.c.v


// MA_API void ma_rb_reset(ma_rb* pRB);
fn C.ma_rb_reset(p_r_b &C.ma_rb)
[inline]
pub fn rb_reset(p_r_b &C.ma_rb) {
	C.ma_rb_reset(p_r_b)
}

// MA_API ma_result ma_rb_acquire_read(ma_rb* pRB, size_t* pSizeInBytes, void** ppBufferOut);
fn C.ma_rb_acquire_read(p_r_b &C.ma_rb, p_size_in_bytes &usize, pp_buffer_out &voidptr) Result
[inline]
pub fn rb_acquire_read(p_r_b &C.ma_rb, p_size_in_bytes &usize, pp_buffer_out &voidptr) Result {
	return C.ma_rb_acquire_read(p_r_b, p_size_in_bytes, pp_buffer_out)
}

// MA_API ma_result ma_rb_commit_read(ma_rb* pRB, size_t sizeInBytes, void* pBufferOut);
fn C.ma_rb_commit_read(p_r_b &C.ma_rb, size_in_bytes usize, p_buffer_out voidptr) Result
[inline]
pub fn rb_commit_read(p_r_b &C.ma_rb, size_in_bytes usize, p_buffer_out voidptr) Result {
	return C.ma_rb_commit_read(p_r_b, size_in_bytes, p_buffer_out)
}

// MA_API ma_result ma_rb_acquire_write(ma_rb* pRB, size_t* pSizeInBytes, void** ppBufferOut);
fn C.ma_rb_acquire_write(p_r_b &C.ma_rb, p_size_in_bytes &usize, pp_buffer_out &voidptr) Result
[inline]
pub fn rb_acquire_write(p_r_b &C.ma_rb, p_size_in_bytes &usize, pp_buffer_out &voidptr) Result {
	return C.ma_rb_acquire_write(p_r_b, p_size_in_bytes, pp_buffer_out)
}

// MA_API ma_result ma_rb_commit_write(ma_rb* pRB, size_t sizeInBytes, void* pBufferOut);
fn C.ma_rb_commit_write(p_r_b &C.ma_rb, size_in_bytes usize, p_buffer_out voidptr) Result
[inline]
pub fn rb_commit_write(p_r_b &C.ma_rb, size_in_bytes usize, p_buffer_out voidptr) Result {
	return C.ma_rb_commit_write(p_r_b, size_in_bytes, p_buffer_out)
}

// MA_API ma_result ma_rb_seek_read(ma_rb* pRB, size_t offsetInBytes);
fn C.ma_rb_seek_read(p_r_b &C.ma_rb, offset_in_bytes usize) Result
[inline]
pub fn rb_seek_read(p_r_b &C.ma_rb, offset_in_bytes usize) Result {
	return C.ma_rb_seek_read(p_r_b, offset_in_bytes)
}

// MA_API ma_result ma_rb_seek_write(ma_rb* pRB, size_t offsetInBytes);
fn C.ma_rb_seek_write(p_r_b &C.ma_rb, offset_in_bytes usize) Result
[inline]
pub fn rb_seek_write(p_r_b &C.ma_rb, offset_in_bytes usize) Result {
	return C.ma_rb_seek_write(p_r_b, offset_in_bytes)
}

// MA_API ma_int32 ma_rb_pointer_distance(ma_rb* pRB);    /* Returns the distance between the write pointer and the read pointer. Should never be negative for a correct program. Will return the number of bytes that can be read before the read pointer hits the write pointer. */
fn C.ma_rb_pointer_distance(p_r_b &C.ma_rb) int
[inline]
pub fn rb_pointer_distance(p_r_b &C.ma_rb) int {
	return C.ma_rb_pointer_distance(p_r_b)
}

// MA_API ma_uint32 ma_rb_available_read(ma_rb* pRB);
fn C.ma_rb_available_read(p_r_b &C.ma_rb) u32
[inline]
pub fn rb_available_read(p_r_b &C.ma_rb) u32 {
	return C.ma_rb_available_read(p_r_b)
}

// MA_API ma_uint32 ma_rb_available_write(ma_rb* pRB);
fn C.ma_rb_available_write(p_r_b &C.ma_rb) u32
[inline]
pub fn rb_available_write(p_r_b &C.ma_rb) u32 {
	return C.ma_rb_available_write(p_r_b)
}

// MA_API size_t ma_rb_get_subbuffer_size(ma_rb* pRB);
fn C.ma_rb_get_subbuffer_size(p_r_b &C.ma_rb) usize
[inline]
pub fn rb_get_subbuffer_size(p_r_b &C.ma_rb) usize {
	return C.ma_rb_get_subbuffer_size(p_r_b)
}

// MA_API size_t ma_rb_get_subbuffer_stride(ma_rb* pRB);
fn C.ma_rb_get_subbuffer_stride(p_r_b &C.ma_rb) usize
[inline]
pub fn rb_get_subbuffer_stride(p_r_b &C.ma_rb) usize {
	return C.ma_rb_get_subbuffer_stride(p_r_b)
}

// MA_API size_t ma_rb_get_subbuffer_offset(ma_rb* pRB, size_t subbufferIndex);
fn C.ma_rb_get_subbuffer_offset(p_r_b &C.ma_rb, subbuffer_index usize) usize
[inline]
pub fn rb_get_subbuffer_offset(p_r_b &C.ma_rb, subbuffer_index usize) usize {
	return C.ma_rb_get_subbuffer_offset(p_r_b, subbuffer_index)
}

// MA_API void* ma_rb_get_subbuffer_ptr(ma_rb* pRB, size_t subbufferIndex, void* pBuffer);
fn C.ma_rb_get_subbuffer_ptr(p_r_b &C.ma_rb, subbuffer_index usize, p_buffer voidptr) voidptr
[inline]
pub fn rb_get_subbuffer_ptr(p_r_b &C.ma_rb, subbuffer_index usize, p_buffer voidptr) voidptr {
	return C.ma_rb_get_subbuffer_ptr(p_r_b, subbuffer_index, p_buffer)
}

// MA_API ma_result ma_pcm_rb_init_ex(ma_format format, ma_uint32 channels, ma_uint32 subbufferSizeInFrames, ma_uint32 subbufferCount, ma_uint32 subbufferStrideInFrames, void* pOptionalPreallocatedBuffer, const ma_allocation_callbacks* pAllocationCallbacks, ma_pcm_rb* pRB);
fn C.ma_pcm_rb_init_ex(format Format, channels u32, subbuffer_size_in_frames u32, subbuffer_count u32, subbuffer_stride_in_frames u32, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_pcm_rb) Result
[inline]
pub fn pcm_rb_init_ex(format Format, channels u32, subbuffer_size_in_frames u32, subbuffer_count u32, subbuffer_stride_in_frames u32, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_pcm_rb) Result {
	return C.ma_pcm_rb_init_ex(format, channels, subbuffer_size_in_frames, subbuffer_count,
		subbuffer_stride_in_frames, p_optional_preallocated_buffer, p_allocation_callbacks,
		p_r_b)
}

// MA_API ma_result ma_pcm_rb_init(ma_format format, ma_uint32 channels, ma_uint32 bufferSizeInFrames, void* pOptionalPreallocatedBuffer, const ma_allocation_callbacks* pAllocationCallbacks, ma_pcm_rb* pRB);
fn C.ma_pcm_rb_init(format Format, channels u32, buffer_size_in_frames u32, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_pcm_rb) Result
[inline]
pub fn pcm_rb_init(format Format, channels u32, buffer_size_in_frames u32, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_pcm_rb) Result {
	return C.ma_pcm_rb_init(format, channels, buffer_size_in_frames, p_optional_preallocated_buffer,
		p_allocation_callbacks, p_r_b)
}

// MA_API void ma_pcm_rb_uninit(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_uninit(p_r_b &C.ma_pcm_rb)
[inline]
pub fn pcm_rb_uninit(p_r_b &C.ma_pcm_rb) {
	C.ma_pcm_rb_uninit(p_r_b)
}

// MA_API void ma_pcm_rb_reset(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_reset(p_r_b &C.ma_pcm_rb)
[inline]
pub fn pcm_rb_reset(p_r_b &C.ma_pcm_rb) {
	C.ma_pcm_rb_reset(p_r_b)
}

// MA_API ma_result ma_pcm_rb_acquire_read(ma_pcm_rb* pRB, ma_uint32* pSizeInFrames, void** ppBufferOut);
fn C.ma_pcm_rb_acquire_read(p_r_b &C.ma_pcm_rb, p_size_in_frames &u32, pp_buffer_out &voidptr) Result
[inline]
pub fn pcm_rb_acquire_read(p_r_b &C.ma_pcm_rb, p_size_in_frames &u32, pp_buffer_out &voidptr) Result {
	return C.ma_pcm_rb_acquire_read(p_r_b, p_size_in_frames, pp_buffer_out)
}

// MA_API ma_result ma_pcm_rb_commit_read(ma_pcm_rb* pRB, ma_uint32 sizeInFrames, void* pBufferOut);
fn C.ma_pcm_rb_commit_read(p_r_b &C.ma_pcm_rb, size_in_frames u32, p_buffer_out voidptr) Result
[inline]
pub fn pcm_rb_commit_read(p_r_b &C.ma_pcm_rb, size_in_frames u32, p_buffer_out voidptr) Result {
	return C.ma_pcm_rb_commit_read(p_r_b, size_in_frames, p_buffer_out)
}

// MA_API ma_result ma_pcm_rb_acquire_write(ma_pcm_rb* pRB, ma_uint32* pSizeInFrames, void** ppBufferOut);
fn C.ma_pcm_rb_acquire_write(p_r_b &C.ma_pcm_rb, p_size_in_frames &u32, pp_buffer_out &voidptr) Result
[inline]
pub fn pcm_rb_acquire_write(p_r_b &C.ma_pcm_rb, p_size_in_frames &u32, pp_buffer_out &voidptr) Result {
	return C.ma_pcm_rb_acquire_write(p_r_b, p_size_in_frames, pp_buffer_out)
}

// MA_API ma_result ma_pcm_rb_commit_write(ma_pcm_rb* pRB, ma_uint32 sizeInFrames, void* pBufferOut);
fn C.ma_pcm_rb_commit_write(p_r_b &C.ma_pcm_rb, size_in_frames u32, p_buffer_out voidptr) Result
[inline]
pub fn pcm_rb_commit_write(p_r_b &C.ma_pcm_rb, size_in_frames u32, p_buffer_out voidptr) Result {
	return C.ma_pcm_rb_commit_write(p_r_b, size_in_frames, p_buffer_out)
}

// MA_API ma_result ma_pcm_rb_seek_read(ma_pcm_rb* pRB, ma_uint32 offsetInFrames);
fn C.ma_pcm_rb_seek_read(p_r_b &C.ma_pcm_rb, offset_in_frames u32) Result
[inline]
pub fn pcm_rb_seek_read(p_r_b &C.ma_pcm_rb, offset_in_frames u32) Result {
	return C.ma_pcm_rb_seek_read(p_r_b, offset_in_frames)
}

// MA_API ma_result ma_pcm_rb_seek_write(ma_pcm_rb* pRB, ma_uint32 offsetInFrames);
fn C.ma_pcm_rb_seek_write(p_r_b &C.ma_pcm_rb, offset_in_frames u32) Result
[inline]
pub fn pcm_rb_seek_write(p_r_b &C.ma_pcm_rb, offset_in_frames u32) Result {
	return C.ma_pcm_rb_seek_write(p_r_b, offset_in_frames)
}

// MA_API ma_int32 ma_pcm_rb_pointer_distance(ma_pcm_rb* pRB); /* Return value is in frames. */
fn C.ma_pcm_rb_pointer_distance(p_r_b &C.ma_pcm_rb) int
[inline]
pub fn pcm_rb_pointer_distance(p_r_b &C.ma_pcm_rb) int {
	return C.ma_pcm_rb_pointer_distance(p_r_b)
}

// MA_API ma_uint32 ma_pcm_rb_available_read(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_available_read(p_r_b &C.ma_pcm_rb) u32
[inline]
pub fn pcm_rb_available_read(p_r_b &C.ma_pcm_rb) u32 {
	return C.ma_pcm_rb_available_read(p_r_b)
}

// MA_API ma_uint32 ma_pcm_rb_available_write(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_available_write(p_r_b &C.ma_pcm_rb) u32
[inline]
pub fn pcm_rb_available_write(p_r_b &C.ma_pcm_rb) u32 {
	return C.ma_pcm_rb_available_write(p_r_b)
}

// MA_API ma_uint32 ma_pcm_rb_get_subbuffer_size(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_get_subbuffer_size(p_r_b &C.ma_pcm_rb) u32
[inline]
pub fn pcm_rb_get_subbuffer_size(p_r_b &C.ma_pcm_rb) u32 {
	return C.ma_pcm_rb_get_subbuffer_size(p_r_b)
}

// MA_API ma_uint32 ma_pcm_rb_get_subbuffer_stride(ma_pcm_rb* pRB);
fn C.ma_pcm_rb_get_subbuffer_stride(p_r_b &C.ma_pcm_rb) u32
[inline]
pub fn pcm_rb_get_subbuffer_stride(p_r_b &C.ma_pcm_rb) u32 {
	return C.ma_pcm_rb_get_subbuffer_stride(p_r_b)
}

// MA_API ma_uint32 ma_pcm_rb_get_subbuffer_offset(ma_pcm_rb* pRB, ma_uint32 subbufferIndex);
fn C.ma_pcm_rb_get_subbuffer_offset(p_r_b &C.ma_pcm_rb, subbuffer_index u32) u32
[inline]
pub fn pcm_rb_get_subbuffer_offset(p_r_b &C.ma_pcm_rb, subbuffer_index u32) u32 {
	return C.ma_pcm_rb_get_subbuffer_offset(p_r_b, subbuffer_index)
}

// MA_API void* ma_pcm_rb_get_subbuffer_ptr(ma_pcm_rb* pRB, ma_uint32 subbufferIndex, void* pBuffer);
fn C.ma_pcm_rb_get_subbuffer_ptr(p_r_b &C.ma_pcm_rb, subbuffer_index u32, p_buffer voidptr) voidptr
[inline]
pub fn pcm_rb_get_subbuffer_ptr(p_r_b &C.ma_pcm_rb, subbuffer_index u32, p_buffer voidptr) voidptr {
	return C.ma_pcm_rb_get_subbuffer_ptr(p_r_b, subbuffer_index, p_buffer)
}

// MA_API ma_result ma_duplex_rb_init(ma_format captureFormat, ma_uint32 captureChannels, ma_uint32 sampleRate, ma_uint32 captureInternalSampleRate, ma_uint32 captureInternalPeriodSizeInFrames, const ma_allocation_callbacks* pAllocationCallbacks, ma_duplex_rb* pRB);
fn C.ma_duplex_rb_init(capture_format Format, capture_channels u32, sample_rate u32, capture_internal_sample_rate u32, capture_internal_period_size_in_frames u32, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_duplex_rb) Result
[inline]
pub fn duplex_rb_init(capture_format Format, capture_channels u32, sample_rate u32, capture_internal_sample_rate u32, capture_internal_period_size_in_frames u32, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_duplex_rb) Result {
	return C.ma_duplex_rb_init(capture_format, capture_channels, sample_rate, capture_internal_sample_rate,
		capture_internal_period_size_in_frames, p_allocation_callbacks, p_r_b)
}

// MA_API ma_result ma_duplex_rb_uninit(ma_duplex_rb* pRB);
fn C.ma_duplex_rb_uninit(p_r_b &C.ma_duplex_rb) Result
[inline]
pub fn duplex_rb_uninit(p_r_b &C.ma_duplex_rb) Result {
	return C.ma_duplex_rb_uninit(p_r_b)
}

// MA_API const char* ma_result_description(ma_result result);
fn C.ma_result_description(result C.ma_result) &char
[inline]
pub fn result_description(result C.ma_result) &char {
	return C.ma_result_description(result)
}

// MA_API void* ma_malloc(size_t sz, const ma_allocation_callbacks* pAllocationCallbacks);
fn C.ma_malloc(sz usize, p_allocation_callbacks &C.ma_allocation_callbacks) voidptr
[inline]
pub fn malloc(sz usize, p_allocation_callbacks &C.ma_allocation_callbacks) voidptr {
	return C.ma_malloc(sz, p_allocation_callbacks)
}
